# ponderosa

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
docs/: GCP_SETUP.md
src/ponderosa/: __init__.py  api.py  cli.py  config.py  logging.py
src/ponderosa/enrichment/: __init__.py
src/ponderosa/ingestion/: __init__.py  audio_downloader.py  rss_parser.py
src/ponderosa/search/: __init__.py
src/ponderosa/storage/: __init__.py  gcs_client.py
src/ponderosa/transcription/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_audio_downloader.py  test_cli.py  test_enrichment.py  test_ingestion.py  test_storage.py  test_transcription.py
