[project]
name = "ponderosa"
version = "0.1.0"
description = "Podcast Intelligence Pipeline - Local transcription and enrichment for podcasts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Transcription
    "faster-whisper>=1.0.0",

    # Podcast ingestion
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",

    # Data processing
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # API serving (Phase 4)
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",

    # Vector storage
    "chromadb>=0.4.0",

    # LLM (Perplexity uses OpenAI-compatible API)
    "openai>=1.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
]

[project.scripts]
ponderosa = "ponderosa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ponderosa"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests requiring network access",
]
